--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "vdom-event-listener",
   "version": "0.0.0",
-  "description": "a virtual-dom hook that lets you add eventListeners on dom nodes",
+  "description": "a virtual-dom hook that adds eventListeners on dom nodes",
   "main": "index.js",
   "scripts": {
+    "lint": "standard",
     "test": "npm run lint"
   },
   "repository": {
@@ -23,5 +24,8 @@
   "bugs": {
     "url": "https://github.com/diffalot/vdom-event-listener/issues"
   },
-  "homepage": "https://github.com/diffalot/vdom-event-listener#readme"
+  "homepage": "https://github.com/diffalot/vdom-event-listener#readme",
+  "devDependencies": {
+    "standard": "^7.1.2"
+  }
 }
