--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
   },
   "homepage": "https://github.com/diffalot/vdom-event-listener#readme",
   "devDependencies": {
-    "standard": "^7.1.2"
+    "standard": "^7.1.2",
+    "tape": "^4.6.0",
+    "wdio-mocha-framework": "^0.4.0",
+    "wdio-sauce-service": "^0.2.4",
+    "wdio-selenium-standalone-service": "0.0.5",
+    "wdio-spec-reporter": "0.0.3",
+    "webdriverio": "^4.2.3"
   }
 }
