Add tests with travis and sauce labs (#1)
* add editorconfig

* rename to EventListener

* add tape tests

* add travis configuration

* limit node tests to v6

* add saucelabs connector to travis

* run tape tests in browser with zuul

* add in browser status widget

* move browser compatibility matrix

* expand browsers tested

* run tests on ios 8 and above

* use 7.0 for iOS instead of 7

* use 4.0 instead of 4 for android versions

* only test latest on iphone, ipad, and android

* actually test that the EventListener hook works

* support older browsers

* lint

* use simulate-event to simulate events cross browser

* disable opera temporarily

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "standard",
-    "test": "npm run lint"
+    "test": "npm run lint && zuul -- test"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,11 @@
   },
   "homepage": "https://github.com/diffalot/vdom-event-listener#readme",
   "devDependencies": {
-    "standard": "^7.1.2"
-  }
+    "simulate-event": "^1.4.0",
+    "standard": "^7.1.2",
+    "tape": "^4.6.0",
+    "virtual-dom": "^2.1.1",
+    "zuul": "^3.10.3"
+  },
+  "dependencies": {}
 }
