--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
   },
   "homepage": "https://github.com/diffalot/vdom-event-listener#readme",
   "devDependencies": {
-    "simulate-event": "^1.4.0",
+    "core-js": "^2.4.1",
     "standard": "^7.1.2",
+    "synthetic-dom-events": "^0.3.0",
     "tape": "^4.6.0",
     "virtual-dom": "^2.1.1",
     "zuul": "^3.10.3"
