--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "e2e-server": "beefy ./test/e2e-app.js",
     "e2e-server-stop": "pkill --signal SIGINT node",
-    "test-e2e": "sleep 5 && protractor",
+    "test-e2e": "sleep 5 && wdio wdio.conf.js",
     "sauce-capabilities": "generate-capabilities -s '> 1%, last 2 versions, ie >= 8' -o test/sauce-capabilities.json",
     "selenium-server": "webdriver-manager update && webdriver-manager start",
     "lint": "standard",
@@ -46,6 +46,10 @@
     "tape": "^4.6.0",
     "virtual-dom": "^2.1.1",
     "watchify": "^3.7.0",
+    "wdio-jasmine-framework": "^0.2.5",
+    "wdio-sauce-service": "^0.2.4",
+    "wdio-spec-reporter": "0.0.3",
+    "webdriverio": "^4.2.3",
     "zuul": "^3.10.3"
   },
   "dependencies": {},
