--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "e2e-server": "beefy ./test/e2e-app.js",
     "e2e-server-stop": "pkill --signal SIGINT node",
     "test-e2e": "sleep 5 && wdio wdio.conf.js",
+    "sauce-test": "TRAVIS=true sc-run npm test",
+    "sauce-debug": "sc-run npm run e2e-server",
     "sauce-capabilities": "generate-capabilities -s '> 1%, last 2 versions, ie >= 8' -o test/sauce-capabilities.json",
     "selenium-server": "webdriver-manager update && webdriver-manager start",
     "lint": "standard",
@@ -40,6 +42,7 @@
     "main-loop": "^3.4.0",
     "protractor": "^4.0.2",
     "redux": "^3.5.2",
+    "sauceconnect-runner": "^0.2.2",
     "saucelabs-multicapabilities-generator": "0.0.1",
     "standard": "^7.1.2",
     "synthetic-dom-events": "^0.3.0",
