--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a virtual-dom hook that adds eventListeners on dom nodes",
   "main": "index.js",
   "scripts": {
-    "e2e-server": "beefy ./test/e2e-app.js",
+    "e2e-server": "beefy ./test/e2e-app.js -- --transform [ babelify --presets [ es2015 ] ]",
     "e2e-server-stop": "pkill --signal SIGINT node",
     "test-e2e": "sleep 5 && wdio wdio.conf.js",
     "sauce-test": "TRAVIS=true sc-run npm test",
@@ -34,6 +34,8 @@
   "homepage": "https://github.com/diffalot/vdom-event-listener#readme",
   "devDependencies": {
     "babel-eslint": "^6.1.2",
+    "babel-preset-es2015": "^6.13.2",
+    "babelify": "^7.3.0",
     "beefy": "^2.1.8",
     "browserslist-saucelabs": "^0.3.0",
     "core-js": "^2.4.1",
